styles/style.css
/* reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
img {
  display: block;
}
/* setup */
:root {
  /* layout colors */
  --bg-main: rgb(40, 40, 40);
  --bg-sub: rgb(169, 159, 168);
  --g-1: rgba(49, 49, 70, 0.9);
  --g-2: rgb(58, 56, 77);
  --g-3: rgb(63, 59, 80, 0.9);
  --g-4: rgba(155, 52, 18, 0.7);

  --border: rgb(85, 85, 85);

  /* font colors */
  --fc-main: rgb(201, 197, 187);
  --fc-sub: rgb(138, 230, 175);
  --fc-alt: rgb(244, 134, 50);
  /* fonts */
  --f-main: 'Monofett';
  --f-sub: 'Fira Code';
}
body {
  color: var(--fc-main);
  background: linear-gradient(
    to top left,
    var(--g-1) 0%,
    var(--g-2) 25%,
    var(--g-3) 50%,
    var(--g-4) 100%
  );
  font-family: var(--f-sub), sans-serif;
  letter-spacing: 2px;
}
/* center */
.wrapper {
  display: flex;
  justify-content: center;
  min-height: 100vh;
}
/* layout */
.container {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.form {
  min-width: 375px;
  padding: 15px;
  border: 0.25px solid gray;
}

.form {
  display: flex;
  flex-direction: column;
  margin: auto;
}
/* images */
.bartender {
  width: 300px;
  transform: scaleX(-1);
}
/* typography */

.form {
  color: white;
  background-color: var(--bg-main);
  border-radius: 1rem;
}
.title-main {
  font-weight: bold;
  font-size: 3rem;
  font-family: var(--f-main), sans-serif;
  letter-spacing: 10px;
  text-align: center;
  text-transform: uppercase;
  text-shadow: 0 1px 0 var(--bg-main), 0 2px 0 var(--bg-main),
    0 3px 0 var(--bg-main), 0 4px 0 var(--fc-alt), 0 5px 0 var(--fc-alt),
    0 6px 0 var(--fc-alt);
  margin-bottom: 25px;
}
.title-sub {
  font-size: 0.8rem;
  letter-spacing: 1px;
}

/* SUBSCRIPTION SECTION */
.subs-section {
  margin-top: 40px;
}
/* contains notification containers */
.subs-ctrls {
  display: flex;
  justify-content: space-around;
  width: 350px;
}
/* notification containers */
.toggle {
  --width: 40px;
  --height: calc(var(--width) / 2);
  --border-radius: calc(var(--height) / 2);
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  cursor: pointer;
  width: 40px;
  height: 100px;
}
/* original checkbox*/
.toggle-input {
  opacity: 0;
  width: 40px;
  height: 20px;
  position: absolute;
}
/* toggle button background 
    - controls button position
    */
.toggle-fill {
  position: relative;
  width: var(--width);
  height: var(--height);
  border-radius: var(--border-radius);
  background: #dddddd;
  transition: background 0.2s;
  overflow: hidden;
}
.toggle-input:checked ~ .toggle-fill {
  background: var(--fc-sub);
}
/* toggle button circle */
.toggle-fill::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: var(--height);
  width: var(--height);
  background: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
  border-radius: var(--border-radius);
  transition: transform 0.2s;
}
.toggle-input:checked ~ .toggle-fill::after {
  transform: translateX(var(--height));
}
/* logos & images */
svg {
  fill: #dddddd;
  width: 35px;
  height: 35px;
}
.toggle-input:checked ~ svg {
  fill: var(--fc-sub);
}
.form-sec,
.bell {
  width: 65px;
  padding: 15px;
  background-color: var(--bg-main);
  border: 0.5px solid var(--border);
  border-radius: 100%;
  position: absolute;
  top: -30px;
}
.form-sec {
  padding: 5px;
  transform: scaleX(-1);
  position: absolute;
  left: 40.5%;
}
/* notification font */
.toggle-fill + p,
.subs {
  font-family: monospace, sans-serif;
  font-size: 1rem;
  text-transform: uppercase;
}
.subs {
  padding: 25px 0 10px 0;
  font-weight: bold;
}
.toggle-fill + p {
  font-size: 0.75rem;
  margin: 4px 0 8px 0;
}
/* grid background */
.background {
  flex-direction: column;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 15px;
  border: 0.5px solid var(--border);
  border-radius: 0.5rem;
}
.background::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: url(../images/batthern.png);
  opacity: 0.5;
}
/* SUBMIT & RESET BUTTONS */
.btns-container {
  display: flex;
  gap: 15px;
}
.submit,
.reset {
  width: 100%;
  height: 45px;
  margin-top: 15px;
  border: none;
  border-radius: 0.4rem;
  font-weight: bold;
  font-family: var(--f-sub), monospace, sans-serif;
  color: var(--bg-main);
  cursor: pointer;
}
/* fill animation */
.submit {
  background-color: rgb(245, 245, 245);
  background-image: linear-gradient(var(--fc-sub), var(--fc-sub));
  background-repeat: no-repeat;
  background-size: 0% 100%;
  background-position-x: right;

  transition: background-size 500ms;
}
.reset {
  background-color: rgb(245, 245, 245);
  background-image: linear-gradient(rgb(227, 85, 85), rgb(227, 85, 85));
  background-repeat: no-repeat;
  background-size: 0% 100%;
  background-position-x: right;

  transition: background-size 500ms;
}
.submit:hover {
  background-size: 100% 100%;
  background-position-x: left;
}
.reset:hover {
  background-size: 100% 100%;
  background-position-x: left;
}
/* FORM SECTION */
.form-section {
  margin-top: 40px;
  padding-top: 40px;
  align-items: flex-start;
}
.form-section,
.subs-section {
  width: 350px;
}
.form-section input {
  width: 100%;
  height: 45px;
  padding: 10px;
  padding-right: 55px;
  margin-top: 5px;
  color: white;
  background-color: var(--bg-main);
  border: 0.5px solid var(--border);
  border-radius: 0.5rem;

  position: relative;
  overflow: hidden;
  z-index: 10;

  font-family: monospace, sans-serif;
  font-size: 0.95rem;
  font-weight: bold;
}
.form-section label {
  text-transform: uppercase;
}
.form {
  margin-bottom: 15px;
}
.user-gen,
.password-input {
  position: relative;
}
.user-gen {
  margin-bottom: 25px;
}
.re-gen,
.show-hide {
  width: 28px;
  height: 28px;
  padding: 3px;
  background-color: var(--bg-main);
  border: none;

  position: absolute;
  left: 87%;
  top: 37px;
  z-index: 10;

  display: flex;
  justify-content: center;
  align-items: center;
}
.re-gen svg,
.show-hide svg {
  width: 100%;
  height: 100%;
  fill: var(--fc-alt);
}
.re-gen:hover,
.show-hide:hover {
  cursor: pointer;
}
@keyframes my-animation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
.spin {
  transform-origin: center center;
  animation: my-animation 0.4s ease;
}
.req {
  color: rgb(171, 171, 171);
}
#user {
  min-width: 315px;
  height: 45px;
}
.validity {
  background-color: var(--bg-main);
  border: 0.5px solid var(--border);
  border-top: none;
  border-radius: 0 0 0.5rem 0.5rem;
  padding: 20px;
}
.message {
  max-width: 350px;
  text-align: center;
  text-transform: uppercase;
  font-size: 0.75rem;
  color: rgb(169, 159, 168);
  line-height: 1.25rem;
}
li {
  list-style: none;
  font-size: 0.65rem;
  color: rgb(210, 210, 210);
  display: flex;
  align-items: center;
  gap: 10px;
}
#display-valid1,
#display-valid2,
#display-valid3 {
  display: flex;
  justify-content: center;
  align-items: center;
}
#display-valid1 svg,
#display-valid2 svg,
#display-valid3 svg {
  width: 15px;
  fill: var(--border);
}
#password {
  border-radius: 0.5rem 0.5rem 0 0;
}
.signup {
  width: 100%;
  text-align: center;
}

